super admin module

--- a/css/vertical-layout-light/style.css
+++ b/css/vertical-layout-light/style.css
@@ -30593,3 +30593,17 @@ div.tagsinput span.tag a {
 }
 
 /*# sourceMappingURL=../maps/vertical-layout-light/style.css.map */
+
+
+
+
+.center-manage-btn{
+  margin-left: 7px;
+    padding: 6px 6px 4px 8px;
+    
+}
+.center-manage-btn1{
+  margin-left: 15px;
+    padding: 6px 6px 4px 8px;
+    
+}
